@@ -4,43 +4,44 @@ import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 
 import java.nio.file.Path;
-import java.util.Locale;
 
-/**
- * Loads a profile image from a local path or web URL into an ImageView.
- */
 public final class ProfileImageUtil {
 
     private ProfileImageUtil() {
     }
 
+    // Load image only from local file path
     public static void loadImage(ImageView imageView, String imagePath) {
+
+        // If image view is null, do nothing
         if (imageView == null) {
             return;
         }
 
+        // Clear current image
         imageView.setImage(null);
-        if (imagePath == null || imagePath.trim().isBlank()) {
+
+        // If path is empty, stop
+        if (imagePath == null || imagePath.trim().isEmpty()) {
             return;
         }
 
         try {
-            String trimmed = imagePath.trim();
-            String source = trimmed;
-            if (!isWebPath(trimmed) && !trimmed.startsWith("file:")) {
-                source = Path.of(trimmed).toUri().toString();
-            }
+            // Convert local file path to URI
+            String path = imagePath.trim();
+            String source = Path.of(path).toUri().toString();
+
+            // Load image
             Image image = new Image(source, true);
+
+            // Set image if no error
             if (!image.isError()) {
                 imageView.setImage(image);
             }
-        } catch (Exception ignored) {
+
+        } catch (Exception e) {
+            // If error, clear image
             imageView.setImage(null);
         }
-    }
-
-    private static boolean isWebPath(String value) {
-        String lower = value.toLowerCase(Locale.ROOT);
-        return lower.startsWith("http://") || lower.startsWith("https://");
     }
 }
